# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: github-actions-demo.yml  test.yml
gendiff/: generate_diff.py
gendiff/modules/: parsing.py
gendiff/scripts/: diff.py  gendiff.py
tests/: test_gendiff.py
tests/fixtures/: json1.json  json2.json  yaml2.yml
