[tool.poetry]
name = "hexlet-code"
version = "0.9.0"
description = ""
authors = ["Ruslan"]
packages = [
{ include = "gendiff"},
]

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
coverage = "^6.0.2"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"